--- a/parallax_website/index.html
+++ b/parallax_website/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
+    <!-- <img src="../images/img2.jpg" alt="City Image" /> -->
     <title>Parallax Website</title>
   </head>
   <body>
@@ -28,7 +29,6 @@
     </section>
     <div class="pimg2">
       <div class="ptext">
-        <link rel="image" type="image/png" href="../images/img2.jpg" />
         <span class="border trans"> Image Text Two </span>
       </div>
     </div>
@@ -46,7 +46,6 @@
     </section>
     <div class="pimg4">
       <div class="ptext">
-        <link rel="image" type="image/png" href="../images/img4.jpg" />
         <span class="border trans"> Image Text Three </span>
       </div>
     </div>
@@ -64,7 +63,6 @@
     </section>
     <div class="pimg1">
       <div class="ptext">
-        <link rel="image" type="image/png" href="../images/img1.jpg" />
         <span class="border"> Paralax Website </span>
       </div>
     </div>
