--- a/Login_form_design/index.html
+++ b/Login_form_design/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <!-- <script
+    <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
     ></script>
     <script
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script> -->
+    ></script>
   </head>
   <body>
     <nav class="nav-bar">
@@ -49,8 +49,7 @@
           <div class="creation-account">
             <span
               >Don't have an account ?
-              <a href="#" class="Registerbtn">Register</a></span
-            >
+              <a href="#" class="Registerbtn">Register</a></span>
           </div>
         </div>
       </div>
@@ -79,6 +78,6 @@
         </div>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
