--- a/Animated_login_form/index.html
+++ b/Animated_login_form/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap"
       rel="stylesheet"
@@ -13,14 +13,14 @@
     <title>Animated Login Form</title>
   </head>
   <body>
-    <img class="wave" src="img/wave.png" />
+    <img class="wave" src="./img/wave.png" />
     <div class="container">
       <div class="img">
-        <img src="img/bg.svg" />
+        <img src="./img/bg.svg" />
       </div>
       <div class="login-content">
         <form action="index.html">
-          <img src="img/avatar.svg" />
+          <img src="./img/avatar.svg" />
           <h2 class="title">Welcome</h2>
           <div class="input-div one">
             <div class="i">
