HTML, CSS, JavaScript

--- a/cleaning-service_landing_page/index.html
+++ b/cleaning-service_landing_page/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-      integrity="sha384-ZJz4DFCkDpI5whNp5bDYjgzgtktS5PP+2vYmW5X1maXJpHj+fcq3g8WtXnNzclNt"
-      crossorigin="anonymous"
-    />
     <!-- animate on scroll -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" href="style-switcher.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Tolmol Cleaning Services</title>
+   
   </head>
   <body>
     <!-- preloader start -->
@@ -290,8 +285,8 @@
                   <li><i class="fas fa-check"></i> window cleaning</li>
                   <li><i class="fas fa-check"></i> carpet cleaning</li>
                   <li><i class="fas fa-check"></i> furniture cleaning</li>
-                  <li><i class="fas fa-times"></i> car cleaning</li>
-                  <li><i class="fas fa-car"></i> bathroom cleaning</li>
+                  <li><i class="fas fa-car"></i> car cleaning</li>
+                  <li><i class="fas fa-times"></i> bathroom cleaning</li>
                 </ul>
               </div>
               <div class="pricing-footer">
@@ -505,6 +500,8 @@
     <!-- style switcher end  -->
 
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/8feb10abb2.js" crossorigin="anonymous"></script>
   <script>
     AOS.init();
   </script>
