--- a/Bootstrap5/index.html
+++ b/Bootstrap5/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" type="text/css" href="/style.css"> -->
-    <!-- <link href="/css/main.min.css" rel="stylesheet"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="/css/main.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <title>Net Ninja Tutorial - The Book</title>
     <style>
@@ -231,11 +231,11 @@
                     <div class="list-group">
                         <div class="list-group-item py-3">
                             <div class="pb-2">
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
                             </div>
                             <h5 class="list-group-item py-3">Simplifies web development</h5>
                             <p class="mb-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore voluptate ut tenetur necessitatibus reprehenderit pariatur commodi quae rem dolores earum.</p>
@@ -243,11 +243,11 @@
                         </div>
                         <div class="list-group-item py-3">
                             <div class="pb-2">
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
                             </div>
                             <h5 class="list-group-item py-3">A must buy for every aspiring web developer</h5>
                             <p class="mb-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore voluptate ut tenetur necessitatibus reprehenderit pariatur commodi quae rem dolores earum.</p>
@@ -255,11 +255,11 @@
                         </div>
                         <div class="list-group-item py-3">
                             <div class="pb-2">
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
                             </div>
                             <h5 class="list-group-item py-3">Very informative</h5>
                             <p class="mb-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore voluptate ut tenetur necessitatibus reprehenderit pariatur commodi quae rem dolores earum.</p>
@@ -267,11 +267,11 @@
                         </div>
                         <div class="list-group-item py-3">
                             <div class="pb-2">
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-half"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-fill text-altdark"></i>
+                                <i class="bi bi-star-half text-altdark"></i>
                             </div>
                             <h5 class="list-group-item py-3">It's worth the time</h5>
                             <p class="mb-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore voluptate ut tenetur necessitatibus reprehenderit pariatur commodi quae rem dolores earum.</p>
